--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,4 +1,4 @@
-.App {
+/*.App {
   height: 100vh;
   padding: 0 10px;
   display: flex;
@@ -60,4 +60,15 @@ button:hover {
   color: black;
   background-color: white;
   border: 2px solid black;
+}
+*/
+
+
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: 1px solid red;
 }
