--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,16 +1,40 @@
-* {
+:root {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-body {
+body{
   width: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+.home-container{
+  width: 100%;
+  height: 100%;
+}
+
+.home-container .wrap{
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+}
+
+.home-container .wrap .video-box{
+  width: 640px;
+  height: 480px;
+  border: 1px solid red;
+  box-sizing: border-box;
+}
+
+
+.home-container .wrap .item-img{
+  width: 50px;
+  height: 100px;
+  border: 1px solid red;
 }
